--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,10 +48,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
+      # - name: Setup PHP
+      #   uses: shivammathur/setup-php@v2
+      #   with:
+      #     php-version: '8.2'
       - name: print Helloo
         run: echo "Hello world"
 
@@ -66,18 +66,8 @@ jobs:
           key: ${{ secrets.SSH_SECTRET_KEY }}
           port: 22
           script: |
-            ls
-            cd demo-ci-cd
-            ls
-            git pull origin "main"
-            echo "done"
-            cd ../
-            sudo cp -r /home/ubuntu/demo-ci-cd /var/www/html
-            cd /var/www/html/demo-ci-cd
-            composer install --no-dev
-            php artisan key:generate
-            sudo nginx -t
-            sudo systemctl restart nginx
+          ls
+            
 
    
    
