updated yaml file

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -67,7 +67,9 @@ jobs:
           port: 22
           script: |
             ls
-            
+
+      env:
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}      
 
    
    
