--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -67,7 +67,10 @@ jobs:
           port: 22
           script: |
             ls
-           
+            cd demo-ci-cd
+            ls
+            git pull origin "main"
+            echo "done"
             
 
     env:
