--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,7 +70,7 @@ jobs:
             cd demo-ci-cd
             ls
             git pull origin "main"
-            echo "doneeee"
+            echo "doneeeee"
             cd ../
             sudo cp -r /home/ubuntu/demo-ci-cd /var/www/html
             cd /var/www/html/demo-ci-cd
